[gd_scene load_steps=3 format=3 uid="uid://cflot7xcjjgxp"]

[ext_resource type="Script" path="res://popup.gd" id="1_b21u6"]
[ext_resource type="FontFile" uid="uid://bk2w46h7lskng" path="res://fonts/IBMPlexSans-Regular.ttf" id="2_1bqwk"]

[node name="popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = 110.0
offset_right = -43.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
script = ExtResource("1_b21u6")

[node name="menu" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 201.0
offset_right = 406.0
offset_bottom = 286.0
theme_override_constants/h_separation = 0
theme_override_constants/arrow_margin = 0
theme_override_constants/outline_size = 0
theme_override_constants/modulate_arrow = 0
theme_override_fonts/font = ExtResource("2_1bqwk")
theme_override_font_sizes/font_size = 33
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Right arm"
popup/item_0/id = 0
popup/item_1/text = "Middle arm"
popup/item_1/id = 1
popup/item_2/text = "Left arm"
popup/item_2/id = 2

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 325.0
offset_right = 480.0
offset_bottom = 373.0
max_value = 5.0
tick_count = 6
ticks_on_borders = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_1bqwk")
theme_override_font_sizes/font_size = 40
text = "Now choose the arm that you think  gives the most money
Please also report your confidence about it on a 0-5 scale
Then press submit
"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 749.0
offset_top = 199.0
offset_right = 1026.0
offset_bottom = 295.0
theme_override_fonts/font = ExtResource("2_1bqwk")
theme_override_font_sizes/font_size = 40
text = "Submit"

[connection signal="item_selected" from="menu" to="." method="_on_menu_item_selected"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
